# cpu-sim

./: .gitignore  README.md
.github/workflows/: cgen_tests.yml  cmake.yml
6502_cgen_test/: run.sh
6502_cgen_test/include/: AddressInfos.hpp  abitset.hpp
6502_cgen_test/src/: Intel6502.cpp  abitset.cpp  main.cpp
6502_ulam/: CMakeLists.txt  input.asm
6502_ulam/include/: Intel6502.hpp  abitset.hpp
6502_ulam/src/: Intel6502.cpp  abitset.cpp
assembler/input/: intel4004.yaml
brainfuck-cpu/: CMakeLists.txt  hello_world.asm  hello_world.hex  run.sh  test.asm  test.hex
brainfuck-cpu/include/: AddressInfos.hpp  BFCPU.hpp  settings.hpp
brainfuck-cpu/src/: BFCPU.cpp  main.cpp
cdfs/: 6502.yaml  brainfuck.yaml  intel4004.yaml
cgen/: CMakeLists.txt  Readme.md  run.sh  test.sh
cgen/include/: argument_parser.hpp  condition.hpp  cpu.hpp  expression.hpp  external_memory.hpp  generator.hpp  instruction.hpp  internal_memory.hpp  matheval.hpp
cgen/include/generator/: arduino_generator.hpp  library_generator.hpp  server_generator.hpp  src_generator.hpp  x86_generator.hpp
cgen/out2/: unvalidated_and_2.txt
cgen/out2/include/: AddressInfos.hpp  abitset.hpp  bitset.hpp  fbitset.hpp
cgen/out2/src/: Intel4004.cpp  abitset.cpp  fbitset.cpp  main.cpp
cgen/out2/version/: simulator_new  simulator_old
cgen/resources/abitset/include/: abitset.hpp
cgen/resources/abitset/src/: abitset.cpp
cgen/resources/arduino/src/: main.cpp
cgen/resources/fbitset/include/: fbitset.hpp
cgen/resources/fbitset/src/: fbitset.cpp
cgen/resources/gasm/include/: gasm.hpp
cgen/resources/gasm/src/: gasm.cpp
cgen/resources/include/: AddressInfo.hpp  abitset.hpp  settings.hpp
cgen/resources/lib/: CMakeLists.txt  cpu.pc.in
cgen/resources/pc/src/: main.cpp
cgen/resources/scripts/: run.sh
cgen/resources/server/src/: main.cpp
cgen/resources/settings/include/: settings.hpp
cgen/resources/src/: abitset.cpp  fbitset.cpp
cgen/resources/standard/include/: AddressInfo.hpp  bitset.hpp  settings.hpp
cgen/resources/standard/src/: AddressInfo.cpp
cgen/resources/website_common/: index.html
cgen/resources/website_common/js/: main.js  setup_editor.js
cgen/resources/website_common/js/ace/: mode-general_assembly.js
cgen/resources/website_server/: index.html
cgen/resources/website_server/js/: cpu_server.js
cgen/resources/website_wa/: build.sh  index.html
cgen/resources/website_wa/js/: cpu_init.js
cgen/resources/website_wa/wa/src/: main.cpp
cgen/src/: argument_parser.cpp  condition.cpp  cpu.cpp  expression.cpp  external_memory.cpp  generator.cpp  instruction.cpp  internal_memory.cpp  main.cpp  matheval.cpp
cgen/src/generator/: arduino_generator.cpp  lib_generator.cpp  pc_generator.cpp  server_generator.cpp  src_generator.cpp  wa_generator.cpp  x86_generator.cpp
cgen/test_files/: intel4004.yaml
cgen/tests/: CMakeLists.txt  abitset.cpp  bitset.cpp  expression.cpp  fbitset.cpp
cheat/: platformio.ini
cheat/include/: AddressInfos.hpp  Intel4004.hpp  bitset.hpp  fbitset.hpp
cheat/src/: Intel4004.cpp  abitset.cpp  main.cpp
doc/intel_4004/: Intel 4004 Instructions Set.html  links.md
doc/intel_4004/example_programs/: add_two_numbers
gasm/: CMakeLists.txt  run.sh
gasm/docs/: documentation.md
gasm/include/: argument_parser.hpp  gasm.hpp  gasm_helper.hpp
gasm/input/: input_6502.asm  intel6502.yaml
gasm/src/: argument_parser.cpp  gasm.cpp  gasm_helper.cpp  main.cpp
hardware_emulation/: platformio.ini
hardware_emulation/include/: AddressInfo.hpp  fbitset.hpp
hardware_emulation/src/: fbitset.cpp  main.cpp
hardware_emulation/zephyr/: CMakeLists.txt
i4004_website/: cpu.json  index.html
i4004_website/css/: main.css
intel-4004-sim/: CMakeLists.txt  input.asm  input2.asm  input3.asm  run.sh
intel-4004-sim/include/: instructions.hpp  intel4001.hpp  intel4002.hpp  intel4004.hpp  main.hpp  parsing.hpp  requests.hpp  server.hpp  system.hpp
intel-4004-sim/include/abc/: abc.hpp
intel-4004-sim/include/assembler/: intel4004_assembler.hpp
intel-4004-sim/pong/: pong  pong.asm
intel-4004-sim/src/: instructions.cpp  intel4004.cpp  main.cpp  parsing.cpp  requests.cpp  server.cpp
intel-4004-sim/src/assembler/: intel4004_assembler.cpp
modelling/: CMakeLists.txt  run.sh
modelling/include/: assembler.hpp  condition.hpp  cpu.hpp  description.hpp  external_memory.hpp  internal_memory.hpp  matheval.hpp  memory.hpp
modelling/resources/: AddressInfo.hpp  bitset.cpp  bitset.hpp
modelling/resources/include/: AddressInfo.hpp  abitset.hpp  bitset.hpp  fbitset.hpp
modelling/resources/src/: AddressInfo.cpp  abitset.cpp  bitset.cpp  fbitset.cpp
modelling/src/: assembler.cpp  condition.cpp  cpu.cpp  description.cpp  expression.cpp  external_memory.cpp  generator.cpp  instruction.cpp  instructions.cpp  internal_memory.cpp  main.cpp  matheval.cpp
modelling/test_files/: input.asm  input2.asm  intel4004.yaml
modelling/tests/: CMakeLists.txt  fbitset.cpp
performance_test/: CMakeLists.txt
performance_test/include/: AddressInfos.hpp  Intel4004.hpp
performance_test/src/: Intel4004.cpp  main.cpp
pong/: CMakeLists.txt  code.hex  jcn_test.asm  pong.asm  ral_test.asm  run.sh
pong-due/: build.sh  platformio.ini
pong-due/include/: AddressInfos.hpp  Intel4004.hpp  settings.hpp
pong-due/src/: Intel4004.cpp  main.cpp
pong/include/: Intel4004.hpp
pong/src/: Intel4004.cpp  abitset.cpp  main.cpp
